--- a/index.html
+++ b/index.html
@@ -50,9 +50,8 @@
     <!-- featured categories-->
      <div class="categories">
         <div class="small-container">
-            <div class="row">
-                <div class="col-3">
-                    <img src="images/IP 16 promax.jpg">
+          <div class="col-3">
+                    <img src="images/IP_16_promax-removebg-preview.png">
                 </div>
                 <div class="col-3">
                     <img src="images/vagary led backpack.jpg" >
