--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
                     <img src="images/IP_16_promax-removebg-preview.png">
                 </div>
                 <div class="col-3">
-                    <img src="images/vagary led backpack.jpg" >
+                    <img src="images/vagary_led_backpack-removebg-preview.png" >
                 </div>
                 <div class="col-3">
-                    <img src="images/hoodie.jpg" >
+                    <img src="images/hoodie-removebg-preview (1).png" >
                 </div>
             </div>
         </div>
